# RCGC

./: CMakeLists.txt  RCGC.sln  RCGC.vcxproj  RCGC.vcxproj.filters  README-ZHCN.md  README.md  bad_sample.cpp  main.cpp  main1.cpp  main2.cpp  rcgc_base.cpp  rcgc_base.h  rcgc_c_ptr.h  rcgc_d_ptr.h  rcgc_f_ptr.h  rcgc_n_ptr.h  rcgc_ptr.h  rcgc_shared_ptr.cpp  rcgc_shared_ptr.h
